--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -9,6 +9,13 @@
 	--roundness: 10px;
 	--homeIcon: url('https://i.imgur.com/yA3h4mo.png') ;
 }
+    /* Changes Home Icon Image */
+#app-mount svg.homeIcon-tEMBK1 {
+    color:transparent;
+    background: var(--homeIcon) no-repeat center/cover;
+    height: 48px;
+    width: 48px;
+}
 
 /* Background image */
 .da-appMount, #app-mount {
