--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -1,11 +1,11 @@
 //META{"name":"Discord+ Source Code","description":"This file is intended for developers only. Please do not use this if you're an end-user.","website":"https://plusinsta.github.io/discord-plus/","author":"PlusInsta","version":"2.2"}*//
-@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:400,600|Roboto:400,700|Russo+One:400');
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:400,600|Roboto:400,700|Roboto+Condensed:400,700');
 :root {
 	--background: url('https://i.imgur.com/3AiL3yN.png');
 	--accent-color: rgb(255,0,0);
 	--font: 'Libre+Franklin';
 	--font-text: 'Roboto';
-	--font-header: 'Russo+One';
+	--font-header: 'Roboto+Condensed';
 	--roundness: 10px;
 	--homeIcon: url('https://i.imgur.com/yA3h4mo.png') ;
 }
