--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -3,11 +3,18 @@
 :root {
 	--background: url('https://i.imgur.com/3AiL3yN.png');
 	--accent-color: rgb(255,0,0);
-	--font: 'Libre+Franklin';
-	--font-text: 'Roboto';
+	--font: 'Roboto';
+	--font-text: 'Libre+Franklin';
 	--font-header: 'Roboto+Condensed';
 	--roundness: 10px;
 	--homeIcon: url('https://i.imgur.com/yA3h4mo.png') ;
+}
+  /* Changes Home Icon Image */
+ #app-mount svg.homeIcon-tEMBK1 {
+    color:transparent;
+    background: var(--homeIcon) no-repeat center/cover;
+    height: 48px;
+    width: 48px;
 }
 
 
